# rustOpengl

./: Cargo.toml  readme.md
materials/: green.ron
shaders/: advanced.fs  advanced.vs  light.fs  light.vs  ubo.fs  ubo.vs
shaders/deferred/: geometry.fs  geometry.vs  light.fs  std.fs
shaders/pbr/: geometry.fs  light.fs
src/: main.rs  structure.md  util.rs
src/components/: camera.rs  light.rs  material.rs  mod.rs  renderable.rs  transform.rs
src/wrapper/: error.rs  frame.rs  mesh.rs  mod.rs  model_loader.rs  shader.rs  ubo.rs  window.rs
src/wrapper/rendering/: framebuffer.rs  material.rs  material_manager.rs  mesh.rs  mod.rs  model_loader.rs  primitive_object.rs  renderbuffer.rs  shader.rs  texture.rs  ubo.rs  uniform_manager.rs  uniformbuffer.rs
