[package]
name = "game_engine"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.42.0"
gl = "0.14.0"
nalgebra = "0.30.1"
nalgebra-glm = "0.16.0"
legion = { version = "0.4.0"}
memoffset = "0.6.5"
tobj = "3.2.0"
rand = "0.8.4"
image = "0.24.0"